# web-agent

./: .gitignore  .loop-commit-msg  .loop-commit-msg.full  IMPLEMENTATION_PLAN.md  README.md  agents.md  build_prompt.md  clone.md  codex_superpower_session.sh  diagram.md  docker-compose.yml  feature_deconstructions.md  flow.mmd  gsd-all.sh  loop.sh  package-lock.json  package.json  prompt_build.md  prompt_clone.md  ralph-build.sh  ralph-clone.sh  superpower.sh  tsconfig.json
.github/workflows/: ci.yml  pages.yml  release-sdk.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: Dockerfile  main.py  requirements.txt
backend/agent/: agentic_chat_runtime.py  answer_synthesis.py  deep_research_artifacts.py  deep_research_chat_runtime.py  deep_research_execution.py  deep_research_planning.py  deep_research_progress.py  deep_research_retrieval_tools.py  deep_research_runtime.py  deep_research_store.py  deep_research_subagents.py  deep_research_supervisor.py  deep_research_verification.py  prompts.py  quick_evidence.py  quick_runtime.py  quick_search.py  quick_selection.py  runtime.py  runtime_constants.py  runtime_errors.py  runtime_execution.py  runtime_logging.py  runtime_policy.py  runtime_sources.py  types.py
backend/api/: __init__.py  contracts.py  errors.py
backend/app/: config.py  main.py
backend/tests/: conftest.py  test_healthz.py  test_startup_settings.py
docs/: application-document.html
docs/assets/: readme-backend-sdk-workflow.excalidraw  readme-pricing-comparison.excalidraw  (+1 more)
frontend/: Dockerfile
public/: index.html
scripts/: release_sdk.sh
sdk/python/: README.md  pyproject.toml
sdk/python/src/web_agent_backend/: __init__.py  errors.py  responses.py
sdk/python/src/web_agent_sdk/: client.py  errors.py
sdk/python/src/web_agent_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/src/web_agent_sdk/schemas/: __init__.py  agentic_search.py  quick_search.py
sdk/python/tests/: test_backend_runtime.py  test_client.py  test_release_assets.py
(+309 files in other folders)
