[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-agent-sdk"
version = "0.1.1"
description = "Python SDK for quick search and agentic search in web-agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1,<1.0.0",
  "pydantic>=2.11,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/Nickbohm555/web-agent"
Repository = "https://github.com/Nickbohm555/web-agent"
Issues = "https://github.com/Nickbohm555/web-agent/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0,<10.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
